# Kinect2ChainLink

./: CMakeLists.txt  README.md  package.xml
config/: chain_link.rviz
data/: ChainLinkResizeCenterClip.pcd  chain_link.pcd  object_templates.txt  object_templates_extra_short.txt  object_templates_short.txt  object_templates_test.txt  test_pcd_1458119499556016849.pcd  test_pcd_1458119502374946093.pcd  test_pcd_1458119504053794525.pcd  view0.pcd  view1.pcd  view10.pcd  view11.pcd  view12.pcd  view13.pcd  view14.pcd  view15.pcd  view16.pcd  view17.pcd  view18.pcd  view19.pcd  view2.pcd  view20.pcd  view21.pcd  view22.pcd  view23.pcd  view24.pcd  view25.pcd  view26.pcd  view27.pcd  view28.pcd  view29.pcd  view3.pcd  view30.pcd  view31.pcd  view32.pcd  view33.pcd  view34.pcd  view35.pcd  view36.pcd  (+11 more)
include/: chain_link_alignment.h  chain_link_grip.h  chain_link_rotations.h
launcher/: chain_link.launch~
src/: chain_link_alignment.cpp  chain_link_grip.cpp  chain_link_grip.cpp.autosave  pcd_write.cpp  template_alignment.cpp
srv/: grip.srv
